@@ -15,14 +15,23 @@
 
 #region Usings
 
+using System;
+using System.Diagnostics;
 using System.Drawing.Imaging;
 
 #endregion
 
 namespace KGySoft.Drawing.Imaging
 {
+    [DebuggerDisplay("{" + nameof(DebuggerValue) + "}")]
     public struct PixelFormatInfo
     {
+        #region Constants
+
+        private const int isGrayscale = 1 << 24;
+
+        #endregion
+
         #region Properties
 
         #region Public Properties
@@ -30,19 +39,55 @@ namespace KGySoft.Drawing.Imaging
         public byte BitsPerPixel
         {
             get => (byte)PixelFormat.ToBitsPerPixel();
-            set => PixelFormat = (PixelFormat)((value & ~0xFF00) | (value << 8));
+            set
+            {
+                if (value > 128)
+                    throw new ArgumentOutOfRangeException(nameof(value), PublicResources.ArgumentMustBeLessThanOrEqualTo(128));
+                PixelFormat = (PixelFormat)((value & ~0xFF00) | (value << 8));
+            }
         }
 
         public bool HasAlpha
         {
             get => PixelFormat.HasAlpha();
-            set => PixelFormat = value ? PixelFormat & ~PixelFormat.Alpha : PixelFormat | PixelFormat.Alpha;
+            set
+            {
+                if (value)
+                {
+                    PixelFormat |= PixelFormat.Alpha;
+                    IsIndexed = false;
+                }
+                else
+                    PixelFormat &= ~PixelFormat.Alpha;
+            }
         }
 
         public bool IsIndexed
         {
             get => PixelFormat.IsIndexed();
-            set => PixelFormat = value ? PixelFormat & ~PixelFormat.Indexed : PixelFormat | PixelFormat.Indexed;
+            set
+            {
+                if (value)
+                {
+                    PixelFormat |= PixelFormat.Indexed;
+                    HasAlpha = false;
+                }
+                else
+                    PixelFormat &= ~PixelFormat.Indexed;
+            }
+        }
+
+        // TODO: needed for non-indexed grayscale types for ErrorDiffusionDitherer to auto detect ByBrightness
+        public bool IsGrayscale
+        {
+            get => ((int)PixelFormat & isGrayscale) != 0;
+            set
+            {
+                if (value)
+                    PixelFormat |= (PixelFormat)isGrayscale;
+                else
+                    PixelFormat &= (PixelFormat)~isGrayscale;
+            }
         }
 
         #endregion
@@ -50,6 +95,12 @@ namespace KGySoft.Drawing.Imaging
         #region Internal Properties
 
         internal PixelFormat PixelFormat { get; private set; }
+
+        #endregion
+
+        #region Private Properties
+
+        private string DebuggerValue => $"{BitsPerPixel}bpp{(HasAlpha ? $"| {nameof(HasAlpha)}" : null)}{(IsIndexed ? $"| {nameof(IsIndexed)}" : null)}";
 
         #endregion
 
@@ -65,7 +116,11 @@ namespace KGySoft.Drawing.Imaging
 
         #region Internal Constructors
 
-        internal PixelFormatInfo(PixelFormat pixelFormat) => PixelFormat = pixelFormat;
+        internal PixelFormatInfo(PixelFormat pixelFormat)
+        {
+            Debug.Assert(pixelFormat.ToBitsPerPixel() <= 128);
+            PixelFormat = pixelFormat;
+        }
 
         #endregion
 
