@@ -16,6 +16,8 @@
     unmanaged element type (structs without references) as well as unmanaged memory and custom pixel formats.
 + New PixelFormatInfo struct to support custom pixel formats.
 + New ICustomBitmapDataRow/ICustomBitmapDataRow<T> interfaces to support accessing rows with custom pixel formats.
++ PredefinedColorsQuantizer:
+  + FromBitmapData method: From now on it supports also custom pixel formats
 * GifEncoder class:
   * The performance and memory usage of the LZW compression has been improved.
   - EncodeAnimation method: If quantizer is not set but the input image is already indexed, then not using the
